fix bug that was causing transaction details to be displayed off-center

--- a/src/App.css
+++ b/src/App.css
@@ -79,3 +79,7 @@ a {
 a:hover {
   color: white;
 }
+
+ul {
+  padding-inline-start: 0px;
+}
